<resources>
    <string name="app_name">AvH Plan</string>
    <string name="substitution_plan">Substitution Plan</string>
    <string name="filters">Filters</string>
    <string name="an_error_occurred">An error has occurred</string>
    <string name="general">General</string>
    <string name="grade">Grade</string>
    <string name="courses">Courses</string>
    <string name="personal">Personal</string>
    <string name="settings">Settings</string>
    <string name="enable_course_notifications_title">Enable course notifications</string>
    <string name="enable_course_notifications_desc">This does not affect broadcasts</string>
    <string name="personalise">Personalize</string>
    <string name="misc">Miscellaneous</string>
    <string name="default_plan_title">Set personalized plan as default</string>
    <string name="default_plan_desc">Defaults to general plan otherwise</string>
    <string name="visit_website_title">Visit the school\'s website</string>
    <string name="visit_website_desc">In case you need to</string>
    <string name="menu">Menu</string>
    <string name="food_menu">Food Menu</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="welcome">Welcome!</string>
    <string name="first_setup_text">First, let\'s setup some things.</string>
    <string name="name_text">Tell me your name.</string>
    <string name="your_name">Your name</string>
    <string name="grade_text">Next, tell me which grade you\'re in.</string>
    <string name="your_grade">Your grade</string>
    <string name="senior_courses_text">If you\'re in senior phase (E-Phase, Q-Phase), please also tell me which courses you\'re enrolled in.</string>
    <string name="your_courses">Your courses</string>
    <string name="more_settings_text">Lastly, just a few more settings.</string>
    <string name="enable_course_notifications">Receive course notifications</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="setup_successful">Have fun!</string>
    <string name="greeting_title">Enable greeting</string>
    <string name="greeting_desc">If you want me to be nice :)</string>
    <string name="licences_title">Licenses</string>
    <string name="licences_desc">What went into making this app</string>
    <string name="version">Version Number</string>
    <string name="information">Information</string>
    <string name="made_by_deniz">Developed by Deniz :)</string>
    <string name="auto_refresh_title">Refresh on startup</string>
    <string name="auto_refresh_desc">In case the background sync doesn\'t work</string>
    <string name="grade_help_dialog_title">How to enter your grade</string>
    <string name="grade_help_dialog_text">Enter your current grade to have it appear in your personal plan and be notified about any information.\n\nNote:\n\nIn junior phase, put the number and letter together, as in \"5a\".\n\nIn E-Phase, separate them by a space, as in \"18 a\".\n\nIn Q1/Q2, only put in the number, as in \"17\".\n\nEntering multiple grades is not recommended.</string>
    <string name="courses_help_dialog_title">How to enter your courses</string>
    <string name="courses_help_dialog_text">You need to enter the course abbreviation for every course you want in your personal plan and want to be notified about. You can find them on your time table.\n\nHere\'s a few examples:\n\nMathematics in 5th grade (juniors) would be MAT.\n\nAdvanced English in E-Phase (seniors) for the English profile may be ENP1.\n\nBasic Biology in Q1 could be bio1.\n\nIn most cases, entering courses while in junior phase is redundant.\nSeparate multiple courses by spaces, commas are optional.\nCapitalization is required.</string>
    <string name="experimental_menu_dialog_title">Testing Menu</string>
    <string name="statistics_dialog_title">Statistics Menu</string>
    <string name="experimental_menu_dialog_text">This menu is intended for testing only.</string>
    <string name="apply">Apply</string>
    <string name="invalid_code">Invalid code</string>
    <string name="plan_empty">The substitution plan is empty</string>
    <string name="personal_plan_empty">Your plan is empty :(</string>
    <string name="food_menu_empty">The food menu is empty</string>
    <string name="customise_colours_title">Customize colors</string>
    <string name="customise_colours_desc">Customize every subject individually</string>
    <string name="course_deu">German (+ as a second language)</string>
    <string name="course_mat">Mathematics</string>
    <string name="course_eng">English (+ for beginners)</string>
    <string name="course_spo">Physical Education</string>
    <string name="course_pol">Politics</string>
    <string name="course_dar">Theatre</string>
    <string name="course_phy">Physics</string>
    <string name="course_bio">Biology &amp; Natural Sciences</string>
    <string name="course_che">Chemistry</string>
    <string name="course_phi">Philosophy</string>
    <string name="course_lat">Latin</string>
    <string name="course_spa">Spanish</string>
    <string name="course_fra">French</string>
    <string name="course_inf">Computer Science</string>
    <string name="course_ges">History</string>
    <string name="course_rel">Religion</string>
    <string name="course_geg">Geography &amp; WUK</string>
    <string name="course_kun">Arts</string>
    <string name="course_mus">Music</string>
    <string name="course_tue">Turkish</string>
    <string name="course_chi">Chinese</string>
    <string name="course_gll">GLL</string>
    <string name="course_wat">WAT</string>
    <string name="course_foer">Special Education</string>
    <string name="course_wp">WP &amp; "Methodenstunde"</string>
    <string name="chrome_not_found">No Chrome-compatible browser found</string>
    <string name="youtube_not_found">YouTube app not found</string>
    <string name="last_updated">Last updated:</string>
    <string name="yourPlan">Your Plan</string>
    <string-array name="greetings_morning">
        <item>Hello, %s!</item>
        <item>Good morning, %s!</item>
        <item>Have a nice day, %s.</item>
        <item>How are you, %s?</item>
        <item>Slept well, %s?</item>
        <item>Hey, %s!</item>
        <item>Hi %s!</item>
        <item>Nice to see you, %s.</item>
        <item>How\'ve you been, %s?</item>
    </string-array>
    <string-array name="greetings_noon">
        <item>Hello, %s!</item>
        <item>Good day, %s!</item>
        <item>Have a nice day, %s.</item>
        <item>How are you, %s?</item>
        <item>Enjoying your day, %s?</item>
        <item>Hey, %s!</item>
        <item>Hi %s!</item>
        <item>Nice to see you, %s.</item>
        <item>Enjoy your day, %s!</item>
    </string-array>
    <string-array name="greetings_evening">
        <item>Hello, %s!</item>
        <item>Good evening, %s!</item>
        <item>Enjoy your evening, %s.</item>
        <item>How are you, %s?</item>
        <item>Hey, %s!</item>
        <item>Hi %s!</item>
    </string-array>
    <string name="pick_ringtone_title">Customize notification ringtone</string>
    <string name="pick_ringtone_desc">Currently: %s</string>
    <string name="pick_ringtone_dialog_title">Pick a notification ringtone</string>
    <string name="pick_ringtone_desc_o">Redirects to device settings</string>
    <string name="default_ringtone">Default</string>
    <string name="permission_denied">Please enable storage permissions</string>
    <string name="success">Success</string>
    <string name="no_notifications_title">Not receiving notifications?</string>
    <string name="no_notifications_desc">Click to see why</string>
    <string name="no_notifications_dialog_text">Note: on some Chinese-branded devices, there may not be a solution to this problem. You\'re welcome to try the tips provided.\n\nBattery saver functions often cause notifications to be delayed or not be received at all. Try setting any battery saving options to their default setting.\n\nSome devices restrict background usage of apps. Please go to your device app settings, select the app and check for a toggle named \"Restrict background usage\" (or similar) and verify that the setting is turned off.\n\nYou\'re also welcome to ask me for help.</string>
    <string name="app_theme">App theme</string>
    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="themes_pre_q">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="force_refresh_successful">Forced refresh successful</string>
    <string name="force_refresh_cleared_times">Cleared refresh times</string>
    <string name="force_refresh_title">Force a refresh</string>
    <string name="force_refresh_desc">Use this if you can\'t see the plan or food menu</string>
    <string name="no_s_plan">\' Plan</string>
    <string name="s_plan">\'s Plan</string>
    <plurals name="notification_more_messages">
        <item quantity="one">,\nand %d more message</item>
        <item quantity="other">,\nand %d more messages</item>
    </plurals>
    <string name="login_required">Please click the button below to enter your username and password to verify that you\'re occupied at the Alexander-von-Humboldt-Gymnasium.\n\nThis login is only required once and your information will not be shared with anybody.\n\nIf you have logged in successfully, but the setup does not continue, please go back and try again.</string>
    <string name="hello">Hello there!</string>
    <string name="username">Your username</string>
    <string name="password">Your password</string>
    <string name="login">Log in</string>
    <string name="logging_in">Logging in…</string>
    <string name="load_page_again">Load login page again</string>
    <string name="logged_in">Login successful!</string>
    <string-array name="ordering_systems">
        <item>App-specific</item>
        <item>Website original</item>
    </string-array>
    <string name="ordering_system_hint">Ordering system</string>
    <string name="ordering_systems_dialog_title">Information on ordering systems</string>
    <string name="ordering_systems_dialog_text">You may pick between two ordering systems that decide the order in which the items on the substitution plan will appear in.\n\nThe default \'app-specific\' is an algorithm implemented in this app that provides a consistently-sorted substitution plan ordered just like the substitution plan on the website used to; sorted by classes, then by time.\n\n\'Website original\' offers the items on the substitution plan just like they\'re presented on the school website, but since these are not guaranteed to be consistent, \'app-specific\' is picked by default.</string>
    <string name="error_please_try_again">An error occurred, please try again</string>
    <string name="thanks_for_using">Thanks for using the app!</string>
    <string name="congratulations_for_nothing">Congratulations! You have achieved nothing.</string>
    <string-array name="colour_names">
        <item>Default</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Cyan</item>
        <item>Light blue</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Brown</item>
        <item>Grey</item>
        <item>Red (iOS)</item>
        <item>Orange (iOS)</item>
        <item>Yellow (iOS)</item>
        <item>Green (iOS)</item>
        <item>Cyan (iOS)</item>
        <item>Light blue (iOS)</item>
        <item>Blue (iOS)</item>
        <item>Purple (iOS)</item>
        <item>Pink (iOS)</item>
        <item>Brown (iOS)</item>
        <item>White</item>
        <item>Black</item>
    </string-array>
    <string name="plan_updated">The plan has been updated</string>
    <string name="food_menu_updated">The food menu has been updated</string>
</resources>