<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".activities.FirstTime"
    android:animateLayoutChanges="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutAnimation="@anim/layout_animation_fall_down">

            <TextView
                android:id="@+id/txtWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginStart="16dp"
                android:text="@string/welcome"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/manrope_extrabold"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtsetupthings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/first_setup_text"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/txtWelcome"
                app:layout_constraintTop_toBottomOf="@+id/txtWelcome" />

            <TextView
                android:id="@+id/txttellmename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/name_text"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/txtsetupthings"
                app:layout_constraintTop_toBottomOf="@+id/txtsetupthings" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutClasses"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/your_name"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txttellmename"
                app:layout_constraintTop_toBottomOf="@+id/txttellmename"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:animateLayoutChanges="true"
                    android:ems="10"
                    android:gravity="start"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txtNextClass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/grade_text"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutClasses"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutClasses"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutClasses" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutClass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:hint="@string/your_grade"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toStartOf="@+id/chipHelpClasses"
                app:layout_constraintStart_toStartOf="@+id/txtNextClass"
                app:layout_constraintTop_toBottomOf="@+id/txtNextClass"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtClasses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:animateLayoutChanges="true"
                    android:ems="10"
                    android:gravity="start"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/chipHelpClasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_qmark"
                android:tint="@color/colorText"
                app:layout_constraintBottom_toBottomOf="@+id/txtLayoutClass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtLayoutClass" />

            <TextView
                android:id="@+id/txtSenior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/senior_courses_text"
                android:gravity="start"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutClasses"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutClasses"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutClass" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutCourses"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:hint="@string/your_courses"
                android:textColorHint="@color/colorHint"
                app:layout_constraintEnd_toStartOf="@+id/chipHelpCourses"
                app:layout_constraintStart_toStartOf="@+id/txtSenior"
                app:layout_constraintTop_toBottomOf="@+id/txtSenior">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtCourses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:animateLayoutChanges="true"
                    android:ems="10"
                    android:gravity="start"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textNoSuggestions"
                    android:singleLine="true"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/chipHelpCourses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/ic_qmark"
                android:tint="@color/colorText"
                app:layout_constraintBottom_toBottomOf="@+id/txtLayoutCourses"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtLayoutCourses" />

            <TextView
                android:id="@+id/txtMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/more_settings_text"
                android:textColor="@color/colorText"
                app:layout_constraintEnd_toEndOf="@+id/txtLayoutClasses"
                app:layout_constraintStart_toStartOf="@+id/txtLayoutClasses"
                app:layout_constraintTop_toBottomOf="@+id/txtLayoutCourses" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintTop_toBottomOf="@+id/txtMore"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layoutAnimation="@anim/layout_animation_fall_down">

                <CheckBox
                    android:id="@+id/cbGreetings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting_title"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"/>

                <CheckBox
                    android:id="@+id/cbDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_dark_mode"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"/>

                <CheckBox
                    android:id="@+id/cbNotif"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_course_notifications"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"/>

                <CheckBox
                    android:id="@+id/cbPersonalised"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_plan_title"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/efab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/lets_go"
        android:textColor="@color/colorBackground"
        app:icon="@drawable/ic_tick"
        app:iconTint="@color/colorBackground"
        android:layout_gravity="bottom|end"
        android:translationZ="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/snackBarLayout"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:id="@+id/linearInflation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>